--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@types/chai": "^4.1.7",
+    "@types/cucumber": "^4.0.4",
     "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
@@ -32,10 +34,13 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "codelyzer": "~4.5.0",
+    "cucumber": "^5.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -44,7 +49,8 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "protractor-cucumber-framework": "^6.1.1",
+    "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
   }
