--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai-as-promised": "^7.1.1",
     "codelyzer": "~4.5.0",
     "cucumber": "^5.1.0",
+    "cucumber-html-reporter": "^4.0.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
